category-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: category-service
  labels:
    app: category-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: category-service
  template:
    metadata:
      labels:
        app: category-service
    spec:
      containers:
        - name: category-service
          image: rajureddy98/purely-category-service:1.0
          ports:
            - containerPort: 9000
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 9000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 9000
            initialDelaySeconds: 20
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: category-service
  labels:
    app: category-service
spec:
  type: ClusterIP
  selector:
    app: category-service
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
