config-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
  labels:
    app: config-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
        - name: config-server
          image: rajureddy98/purely-config-server:1.0
          ports:
            - containerPort: 8888
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: config-server
  labels:
    app: config-server
spec:
  type: ClusterIP
  selector:
    app: config-server
  ports:
    - port: 8888
      targetPort: 8888
      protocol: TCP
